Fix `DISPATCHER ABSENT` issue by converting `@Configuration` to `@AutoConfiguration` for correct bean initialization order